# ferrous-qat

./: Cargo.toml  LICENSE-MIT  README.md
benches/: matching.rs
docs/: qat_grammar.pest
scripts/: process_wordlist.py
src/: index.rs  lib.rs  parse.rs  pattern.rs
src/parsing/: mod.rs  qat.pest
src/pattern/: automata.rs  charset.rs  mod.rs  parsing.rs
tests/: matching-tests.proptest-regressions  matching-tests.rs
