[package]
name = "wordqat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.2.0"

[[bench]]
name = "matching"
harness = false
